# er-aws-msk

./: Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml  validate_plan.py
.tekton/: er-aws-msk-main-pull-request.yaml  er-aws-msk-main-push.yaml
dockerfiles/: Dockerfile  Dockerfile.test
er_aws_msk/: app_interface_input.py
hooks/: post_plan.py
hooks_lib/: aws_api.py
terraform/: main.tf  variables.tf  versions.tf
tests/: conftest.py  test_core.py  test_hooks_lib_aws_api.py  test_hooks_post_plan.py  test_main.py  test_stack.py
