[tool.poetry]
name = "er-aws-msk"
version = "0.1.0"
description = "Please describe me"
authors = ["first-name last-name <email@address.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{ include = "er_aws_msk" }]
homepage = "https://github.com/app-sre/er-aws-msk"
repository = "https://github.com/app-sre/er-aws-msk"
documentation = "https://github.com/app-sre/er-aws-msk"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
mypy = "^1.10.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
er-aws-msk = 'er_aws_msk.__main__:app'

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = 'py311'
required-version = "0.4.8" # keep in sync with dev dependencies!
src = ["er_aws_msk"]
extend-exclude = [
    ".local", # used by poetry in local venv
    ".cache", # used by poetry in local venv
]
fix = true

[tool.ruff.lint]
preview = true
# defaults are ["E4", "E7", "E9", "F"]
extend-select = [
    # flake8 default rules
    "E1", # preview rule
    "E2", # preview rule
    "W",
    # isort
    "I",
    # pylint
    "PL",
    # pyupgrade
    "UP",
]
ignore = [
    "PLR0904", # Too many public methods
    "PLR0913", # Too many arguments
    "PLR0917", # Too many positional arguments
]
[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["er_aws_msk"]

# Mypy configuration
[tool.mypy]
files = ["er_aws_msk", "tests"]
enable_error_code = ["truthy-bool", "redundant-expr"]
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
# Below are all of the packages that don't implement stub packages. Mypy will throw an error if we don't ignore the
# missing imports. See: https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports
module = ["my_3rd_party_module.*"]
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 90
